14.mar (ws)
      - fix crash when inserting vertical frame (#9765)
      - add preference value for audio export sample rate
      - fix audio export
13.mar (ws)
      - #9731: fix backward compatibility for latest changes in clef handling
11.mar (ws)
      - more articulations: pralldown, prallup, lineprall
      - palette customization: resize palette after adding/removing elements
      - set invisible now works for all selected elements
      - rework auto beamer
      - fix regressions for clef
      (db)
      - voice shortcuts now: Ctrl+Alt+[number]
9.mar (ws)
      - allow changing voices for simple cases
8.mar (ws)
      - allow more than one clef at the same tick position. Example is a piano score
        were the top staff starts with a G clef and switches immediately to an F clef
        without any notes in between.
4.mar (ws)
      - fixes for harmony-editor
      - chords(harmony) can have more than one name by adding more <name> tags to
        chords.xml or stdchords.xml/jazzchords.xml.
      - unrecognized harmony names are marked with a wavy underline during entry
2.mar (ws)
      - mark middle c in virtual piano
1.mar (ws)
      - use Ctrl+Click to enter chords with virtual piano
      - implement "respell" command ("J")
      - new media dialog (to add/remove pdf scans for side by side display)
        (audio not implemented)
      - new virtual piano for note input
28.feb (ws)
      - add beaming rules for 12/16 time signature as seen in bach's goldberg variation #11
27.feb (ws)
      - expose more bar line style parameters in edit style:
         - ST_barWidth
         - ST_endBarWidth
         - ST_endBarDistance
         - ST_doubleBarWidth
         - ST_doubleBarDistance
      - use raster when dragging symbols
      - fix dragging a symbol onto a symbol creating a "compound" symbol
        (try dragging a "acc dot" onto an "acc discant")
      - add z-axis to element coordinates
      - add Ctrl+L (edit element) to element context menu